Comment out Databento client initialization

--- a/databento.ipynb
+++ b/databento.ipynb
@@ -13,7 +13,7 @@
     "from datetime import datetime, timedelta\n",
     "\n",
     "# Initialize Databento client\n",
-    "# client = db.Historical(\"db-33TJnJvdLS8YimKPDiw9XQcvyVwin\")\n"
+    "# client = db.Historical(\"")\n"
    ]
   },
   {
